sidebar overflow-x fixed

--- a/css/youtubeSideBar.css
+++ b/css/youtubeSideBar.css
@@ -167,7 +167,8 @@ img{
     width: 65px;
 }
 .sidebar__menu-all{
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     position: relative;
     
 }
@@ -209,7 +210,6 @@ img{
     border-radius: 5px;
     transition: all .2s;
     cursor: pointer;
-    overflow: hidden;
     width: 20rem;
 }
 .sidebar__item > i{
